[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/font/SpaceCowboy-6RXg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scene/UI/about page.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=8]
size = 120
outline_size = 8
outline_color = Color( 0.980392, 0.184314, 0.709804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 1 )

[node name="AboutPage" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.027451, 0.12549, 0.72549 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="close" type="Button" parent="VBoxContainer"]
margin_right = 306.0
margin_bottom = 142.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 8 )
text = "x close"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 2460.0
margin_bottom = 1354.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 7 )
text = "Made by Noach, Silvia and Emmanuel for the Godot Wild Jam #48 with <3 on shitty laptops
The theme was \"moon\", we incorporated the wildcards \"not another plattformer\" (well, the train can't jump)  and \"been here before\" (whole map is a circle). 

Our art was made in Krita, Sounds in Audacity and the game in Godot (duh) 
------------------------------------
Credits/Attribution:
Music/ Sound:
- Prairie Oyster by Ben Reber, CC BY 4.0 Licence https://creativecommons.org/licenses/by/4.0/
CRT shader:
- pend00/Peter HÃ¶glund: VHS and CRT monitor effect, CC0 license
Space cowboy font: 
- Snailfonts/Jonathan Keene: Freeware

"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1358.0
margin_right = 2460.0
margin_bottom = 1500.0

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 2460.0
margin_bottom = 142.0
size_flags_horizontal = 3
alignment = 1

[node name="Github" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 1228.0
margin_bottom = 142.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
text = "Code/Github"
flat = true

[node name="Jam" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 1232.0
margin_right = 2460.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Godot Wild Jam"
flat = true

[connection signal="pressed" from="VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Github" to="." method="_on_Github_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Jam" to="." method="_on_Jam_pressed"]
